plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.github.johnrengelman.processes' version '0.5.0'
}

group = 'com.example'
version = '1.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)//stable version
	}
}
repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/release' }
}

jar {
	archiveBaseName = 'backend'
	archiveVersion = '1.0.0'
}

bootJar {
	archiveBaseName = 'backend'
	archiveVersion = '1.0.0'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:2.15.3'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	implementation 'javax.persistence:javax.persistence-api:2.2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	//implementation 'com.vmware.tanzu.spring.governance:governance-starter:1.3.1'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2' // Add H2 for testing
	testImplementation 'com.jayway.jsonpath:json-path:2.9.0'
	
	// JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// bcrypt
    implementation 'org.springframework.security:spring-security-crypto'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('build') {
	dependsOn bootJar // Ensure bootJar is always executed
}
